ready for dr Mackiewicz

--- a/paper.tex
+++ b/paper.tex
@@ -396,13 +396,14 @@ To provide the honest comparison, we trained our model on 2311 signal peptide-co
   \toprule
 Software name & AUC & Sensitivity & Specificity & MCC \\ 
   \midrule
-signalP 4.1 (no tm) \citep{2011petersensignalp} & 0.9424 & 0.9720 & 0.9128 & 0.8859 \\ 
-   \rowcolor[gray]{0.85}signalP 4.1 (tm) \citep{2011petersensignalp} & 0.9675 & 0.9579 & 0.9771 & 0.9353 \\ 
-  PrediSi \citep{2004hillerpredisi} & 0.8959 & 0.9065 & 0.8853 & 0.7919 \\ 
-   \rowcolor[gray]{0.85}Phobius \citep{2004klla} & 0.9515 & 0.9673 & 0.9358 & 0.9033 \\ 
-  Philius \citep{2008reynoldstransmembrane} & 0.9376 & 0.9533 & 0.9220 & 0.8755 \\ 
-   \rowcolor[gray]{0.85}signalHsmm-2010 & 0.9429 & 0.9393 & 0.8761 & 0.8166 \\ 
-  signalHsmm-1989 & 0.9455 & 0.9486 & 0.8945 & 0.8440 \\ 
+signalP 4.1 (no tm) \citep{2011petersensignalp} & 0.9416 & 0.9720 & 0.9112 & 0.8848 \\ 
+   \rowcolor[gray]{0.85}signalP 4.1 (tm) \citep{2011petersensignalp} & 0.9673 & 0.9579 & 0.9766 & 0.9347 \\ 
+  PrediSi \citep{2004hillerpredisi} & 0.8949 & 0.9065 & 0.8832 & 0.7899 \\ 
+   \rowcolor[gray]{0.85}Phobius \citep{2004klla} & 0.9509 & 0.9673 & 0.9346 & 0.9024 \\ 
+  Philius \citep{2008reynoldstransmembrane} & 0.9369 & 0.9533 & 0.9206 & 0.8743 \\ 
+   \rowcolor[gray]{0.85}signalHsmm-2010 & 0.9526 & 0.9533 & 0.8832 & 0.8385 \\ 
+  signalHsmm-1989 & 0.9562 & 0.9626 & 0.8972 & 0.8617 \\ 
+   \rowcolor[gray]{0.85}signalHsmm-2010 with k-mers & 0.9679 & 0.9673 & 0.9112 & 0.8799 \\ 
    \bottomrule
 \end{tabular}
 \label{tab:bench2010}
@@ -423,6 +424,7 @@ signalP 4.1 (no tm) \citep{2011petersensignalp} & 0.7928 & 0.6471 & 0.9385 & 0.6
    \rowcolor[gray]{0.85}Philius \citep{2008reynoldstransmembrane} & 0.7753 & 0.6176 & 0.9330 & 0.5841 \\ 
   signalHsmm-2010 & 0.9340 & 0.7941 & 0.8939 & 0.6526 \\ 
    \rowcolor[gray]{0.85}signalHsmm-1989 & 0.9326 & 0.9216 & 0.8966 & 0.7531 \\ 
+  signalHsmm-2010 with k-mers & 0.9334 & 0.9902 & 0.7989 & 0.6767 \\ 
    \bottomrule
 \end{tabular}
 \label{tab:bench2010plas}
