--- a/paper.tex
+++ b/paper.tex
@@ -24,7 +24,7 @@
 \keywords{eukaryote; hidden semi-Markov models; n-gram; signal peptide prediction}
 
 \begin{abstract}
-Short stretches of amino acid residues called targeting signals are involved in the proper localization of proteins in a cell, which is essential to maintain their desired function. Ones of them are signal peptides, which are responsible for targeting of proteins to endomembrane system and their export outside the cell. Proteins equipped with signal peptides play crucial roles in metabolism, maintenance of tissue structure, immune response and regulation of other organismal functions. Studies of many protein sequences indicate a great variability of signal peptides, which was not considered in the current software for their prediction. Therefore, we designed a new, more universal probabilistic model for eukaryotic signal peptides, which includes knowledge about their organization, amino acid composition and variation. The proposed approach is based on hidden semi-Markov models (HSMMs) and use intrinsic knowledge about signal peptides. The big advantage of the algorithm is its extensibility. Using the n-grams (k-mers), we showed that the general model can yield not only better results than other software but also more information about features of signal peptides. Our model showed the largest AUC = 0.97 in comparison to other signal peptide predictor even after training on very small data sets. Moreover, it appeared very stable regardless of types of learning data sets. Therefore, our model does not need to be permanently retrained with the continuous expansion of sequence databases. It should be emphasized that our model described signal peptides from medically significant malaria parasites \textsl{Plasmodium} and their relatives more accurately (with AUC = 0.92) than popular programs (0.84). The web-server of signalHsmm is available at \url{http://smorfland.uni.wroc.pl/signalhsmm}.
+Short stretches of amino acid residues called targeting signals are involved in the proper localization of proteins in a cell, which is essential to maintain their desired function. Ones of them are signal peptides, which are responsible for targeting of proteins to endomembrane system and their export outside the cell. Proteins equipped with signal peptides play crucial roles in metabolism, maintenance of tissue structure, immune response and regulation of other organismal functions. Studies of many protein sequences indicate a great variability of signal peptides, which was not considered in the current software for their prediction. Therefore, we designed a new, more universal probabilistic model for eukaryotic signal peptides, which includes knowledge about their organization, amino acid composition and variability. The proposed approach is based on hidden semi-Markov models (HSMMs) and uses intrinsic knowledge about signal peptides. The big advantage of the algorithm is its extensibility. By using n-grams (k-mers), we showed that the general model can yield not only better results than other software but also more information about features of signal peptides. Our model showed the largest AUC = 0.97 in comparison to other signal peptide predictor despite the fact it was trained on very small data set. Moreover, it appears to be very stable regardless of types of learning data sets. Therefore, our model does not need to be permanently retrained with the continuous expansion of sequence databases. It should be emphasized that our model described signal peptides from medically significant malaria parasites \textsl{Plasmodium} and their relatives more accurately (with AUC = 0.92) than popular programs (0.84). The web-server of signalHsmm is available at \url{http://smorfland.uni.wroc.pl/signalhsmm}.
 
 \end{abstract}
 
@@ -38,11 +38,11 @@ Short stretches of amino acid residues called targeting signals are involved in 
 
 \subsection*{Roles and features of signal peptides}
 
-Proteins of eukaryotes are encoded in nuclear genomes and are synthesized in ribosomes located in the cytosol or bounded by the endoplasmic reticulum. After translation, proteins are targeted to specific subcellular compartments or exported outside the cell. The proper localization of proteins is essential to perform their desired function. Information about the protein destination is included within the very protein in short stretches of amino acid residues called targeting or sorting signals. Ones of them are signal peptides, which are located at the N-terminus of proteins.
+Proteins of eukaryotes are encoded in nuclear genomes and are synthesized in ribosomes located in the cytosol or bounded by the endoplasmic reticulum. After translation, proteins are targeted to specific subcellular compartments or exported outside the cell. The proper localization of proteins is essential to perform their desired function. Information about the protein destination is included within the very protein in short stretches of amino acid residues called targeting or sorting signals. One kind of them are signal peptides, which are located at the N-terminus of proteins.
 
-Signal peptides are responsible for targeting of proteins via the Sec61 translocation channel~\citep{2007rapoportprotein} to endomembrane system, which includes endoplasmic reticulum and Golgi apparatus. Such proteins can stay inside of these compartments, can be inserted into cellular membranes or exported outside the cell. Proteins equipped with signal peptides play crucial roles in metabolism ($\beta$ galactosidase, pepsins)~\citep{1991hofmannmutations}, maintenance of tissue structure (collagen)~\citep{2001chanaberrant}, immune response (interferons, interleukins)~\citep{2005zhangalteration} and regulation of other organismal functions (prolactin, glucagon)~\citep{2010huangrole}. Moreover, passing proteins through the endomembrane system is important for their correct folding and posttranslational modification such as glycosylation and phosphorylation.
+Signal peptides are responsible for targeting of proteins via the Sec61 translocation channel~\citep{2007rapoportprotein} to endomembrane system, which includes endoplasmic reticulum and Golgi apparatus. Such proteins can stay inside these compartments, can be inserted into cellular membranes or exported outside the cell. Proteins equipped with signal peptides play crucial role in metabolism ($\beta$ galactosidase, pepsins)~\citep{1991hofmannmutations}, maintenance of tissue structure (collagen)~\citep{2001chanaberrant}, immune response (interferons, interleukins)~\citep{2005zhangalteration} and regulation of other organismal functions (prolactin, glucagon)~\citep{2010huangrole}. Moreover, passing proteins through the endomembrane system is important for their correct folding and posttranslational modification such as glycosylation and phosphorylation.
 
-Despite the low sequence homology between signal peptides~\citep{1999ladungaphysean}, some general architecture were proposed~\citep{1994izardsignal, 2013vossmechanism} - Fig. \ref{fig:sparch}. It is assumed that signal peptides start with a positively charged sequence of amino acid residues, called the n-region with the length of about 5-8 residues. They probably enforce a proper topology on the polypeptide during its translocation through membrane based on the positive-inside rule~\citep{1988vonheijnetopogenic}. The first region is followed by a stretch of hydrophobic amino acids (h-region) with the length of about 8-12 residues. It constitutes a core region of signal peptide and usually forms $\alpha$-helix. The third part of a signal peptide, usually 6 residues long, is a polar, but uncharged c-region ended with a cleavage site, in which the signal peptidase cleaves the signal peptide, during or after translocation of the protein into the endoplasmic reticulum ~\citep{2002paetzelsignal}. The cleavage site is characterized by a variable amino acid composition. It typically contains small and neutral residues at -3 and -1 positions~\citep{1994palzkillselection}. This site is, however, absent from some membrane proteins in which the first transmembrane domain acts both as a signal peptide and signal anchor~\citep{1988szczesnaskorupapositive}. The amino acid composition and the length of these regions vary between signal peptides, which influences the efficiency of protein secretion~\citep{2006hegdethe}.
+Despite the low sequence homology between signal peptides~\citep{1999ladungaphysean}, some general architecture were proposed~\citep{1994izardsignal, 2013vossmechanism} - Fig. \ref{fig:sparch}. It is assumed that signal peptides start with a positively charged sequence of amino acid residues, called the n-region with the length of about 5-8 residues. They probably enforce a proper topology on the polypeptide during its translocation through membrane based on the positive-inside rule~\citep{1988vonheijnetopogenic}. The first region is followed by a stretch of hydrophobic amino acids (h-region) with the length of about 8-12 residues. It constitutes a core region of signal peptide and usually forms $\alpha$-helix. The third part of a signal peptide is a polar, but uncharged c-region. It is usually 6 residues long and ends with a cleavage site, in which the signal peptidase cleaves the signal peptide, during or after translocation of the protein into the endoplasmic reticulum ~\citep{2002paetzelsignal}. The cleavage site is characterized by a variable amino acid composition. It typically contains small and neutral residues at -3 and -1 positions~\citep{1994palzkillselection}. This site is, however, absent from some membrane proteins in which the first transmembrane domain acts both as a signal peptide and signal anchor~\citep{1988szczesnaskorupapositive}. The amino acid composition and the length of these regions vary between signal peptides, which influences the efficiency of protein secretion~\citep{2006hegdethe}.
 
 \begin{figure}[ht]\centering
 \includegraphics[width=0.55\textwidth]{figures/SP.png}
@@ -56,7 +56,7 @@ Some data indicate that signal peptides may be universal. It was found, for exam
 
 \subsection*{Software predicting signal peptides}
 
-Although many experimental methods determining the subcellular localization of proteins were devised, they are time consuming and laborious. Therefore, signal peptides became the subject of many computational programs to their prediction. Many software incorporates ‘black-box’ models, such as: neural networks~\citep{2011petersensignalp}, support vector machines~\citep{2014zhangprediction}, Bayesian networks~\citep{2012zhengsignalbnf} or k-nearest neighbours~\citep{2007shensignall}. However, these models do not provide direct biological information about organization of signal peptides and are not able to predict properly atypical signal peptides. Although there are programs that do not share the innate flaws of ‘black-box’ models, they also demand an improvement. Some of them are based on position matrices or their variants~\citep{2014zhangprediction, 2004hillerpredisi}. Others (Phobius, Philius and SignalP 3.0) use hidden Markov models (HMMs)~\citep{2004klla, 2008reynoldstransmembrane, 2004bendtsenimproved}, which try to reflect regions of signal peptides without realizing limitations of their probabilistic frameworks. The used HMMs imply a geometric distribution for duration of regions' length. We verified the distribution for regions from the first work utilizing HMMs in prediction of signal peptides~\citep{1998nielsenprediction} and found that the the length distribution for every region was other than geometric (Fig. \ref{fig:reglen}). Moreover, the commonly used rigid scheme of signal peptide's organization (Fig. \ref{fig:sparch}) does not describe extremely long or short peptides. Theoretically, HMMs that describe the atypical signal peptides could be developed to consider also the unusual structures but such probabilistic frameworks have not still been implemented.
+Although many experimental methods determining the subcellular localization of proteins were devised, they are time consuming and laborious. Therefore, signal peptides became the subject of many computational programs to their prediction. Many software incorporates ‘black-box’ models, such as: neural networks~\citep{2011petersensignalp}, support vector machines~\citep{2014zhangprediction}, Bayesian networks~\citep{2012zhengsignalbnf} or k-nearest neighbours~\citep{2007shensignall}. However, these models do not provide direct biological information about organization of signal peptides and are not able to predict properly atypical signal peptides. Although there are programs that do not share the innate flaws of ‘black-box’ models, they also demand an improvement. Some of them are based on position matrices or their variants~\citep{2014zhangprediction, 2004hillerpredisi}. Others (Phobius, Philius and SignalP 3.0) use hidden Markov models (HMMs)~\citep{2004klla, 2008reynoldstransmembrane, 2004bendtsenimproved}, which try to reflect structure of signal peptides regions in their limited probabilistic frameworks. The HMMs they use, however, imply a geometric distribution for duration of regions length. We studied the distribution for regions from the first work utilizing HMMs in prediction of signal peptides~\citep{1998nielsenprediction} and found that the the length distribution for every region was not geometric (Fig. \ref{fig:reglen}). Moreover, the commonly used rigid scheme of signal peptide's organization (Fig. \ref{fig:sparch}) does not describe extremely long or short peptides. Theoretically, HMMs that describe the atypical signal peptides could be developed to consider also the unusual structures, but such probabilistic frameworks have not yet been implemented.
 
 \begin{figure}[ht]\centering
 \includegraphics[width=0.95\textwidth]{figures/reglen.eps}
@@ -66,7 +66,7 @@ Although many experimental methods determining the subcellular localization of p
 
 All programs used in signal peptide recognition are trained on real protein sequences. Therefore, they succeed in the recognition of peptides similar to those in the learning set but fail in the case of artificial signal peptides. Such peptides are designed to increase effectiveness of protein secretion~\citep{2010futatsumorisugaisignal}. They are especially important in industrial applications to increase yield of proteins. Therefore, only explicit knowledge about the organization of signal peptides allows creating sequences that will be the most efficient in the export of proteins~\citep{2013ngengineering}. Signal peptides have also an important application in gene therapy. Mimicking the natural mechanism of protein export, artificial signal peptides with tumor epitopes increase the antitumor immune response~\citep{2003heenhanced}. Such epitopes must be properly inserted into a signal peptide without decreasing its secretion properties through disruption of the regional structure. Instead of time-consuming and expensive laboratory experiments, it would be very useful to survey in silico many artificial peptides to select the ones that would fulfill the designed role.
 
-Majority of the signal peptide predicting software use the orthogonal encoding of amino acids, in which a vector of 20 digits represents every amino acid. This method of encoding, however, does not regard relationships between amino acids and differences in their physicochemical properties. This is disadvantage of such signal peptides' models because their regions are in fact characterized by specific features of amino acid residues and not by the simple occurrence of specific amino acids. In addition to this, such sparse encoding enforces larger data sets, which hinders their management and analysis~\citep{2002linamino}. Therefore, we elaborated a new approach based on hidden semi-Markov models using grouping of amino acids into physicochemical groups characteristic of signal peptides. The new methods proved better in comparison to the current software.
+Majority of the signal peptide predicting software uses the orthogonal encoding of amino acids, in which a vector of 20 digits represents every amino acid. This method of encoding, however, does not take into account relationships between amino acids and differences in their physicochemical properties. This is disadvantage of such signal peptides' models because their regions are in fact characterized by specific features of amino acid residues and not by the simple occurrence of specific amino acids. In addition to this, such sparse encoding enforces larger data sets, which hinders their management and analysis~\citep{2002linamino}. Therefore, we elaborated a new approach based on hidden semi-Markov models using grouping of amino acids into physicochemical groups characteristic of signal peptides. The new methods proved better in comparison to the current software.
 
 
 
@@ -75,15 +75,15 @@ Majority of the signal peptide predicting software use the orthogonal encoding o
 
 \subsection*{Overview}
 
-Since the functionality of signal peptides depends the physicochemical properties of residues in a given region, we clustered amino acids into several groups based on their characteristics. The pre-processed sequences were further analyzed by the heuristic algorithm, which determines borders between three characteristic signal peptide regions~\cite{1998nielsenprediction}. We refined some region recognition criteria to attune the algorithm to less typical signal peptides. Next, two models were trained to recognize proteins with and without a signal peptide. The first one was a hidden semi-Markov model, in which each of three signal peptide regions was represented by a different hidden state. The additional fourth hidden state represented a mature protein. Each state was described by its frequencies of amino acid groups. The distribution of hidden states durations, i.e. the number of amino acids, was based on the empirical distribution of region lengths from the training set. Furthermore, the hidden semi-Markov model was enriched with n-grams representing signal peptide cleavage sites. The second model was a simple probabilistic approach in which no association between amino acids was assumed, and probability of amino acids groups occurrence was determined by their frequencies in mature proteins.
+Since the functionality of signal peptides depends on the physicochemical properties of residues in a given region, we clustered amino acids into several groups based on their characteristics. The pre-processed sequences were further analyzed by the heuristic algorithm, which determines borders between three characteristic signal peptide regions~\cite{1998nielsenprediction}. We refined some region recognition criteria to attune the algorithm to less typical signal peptides. Next, two models were trained to recognize proteins with and without a signal peptide. The first one was a hidden semi-Markov model, in which each of three signal peptide regions was represented by a different hidden state. The additional fourth hidden state represented a mature protein. Each state was described by its frequencies of amino acid groups. The distribution of hidden states durations, i.e. the number of amino acids, was based on the empirical distribution of region lengths from the training set. Furthermore, the hidden semi-Markov model was enriched with n-grams representing signal peptide cleavage sites. The second model was a simple probabilistic approach in which no association between amino acids was assumed, and probability of amino acids groups occurrence was determined by their frequencies in mature proteins.
 
 \subsection*{Data selection}
 
-Eukaryotic protein sequences and their annotations were properly prepared according to the literature of the subject and downloaded from UniProt database release 2015\_06. The positive set contained 2~589 sequences with an experimentally confirmed signal peptide, its start and cleavage site. Sequences with more than one cleavage site were excluded from the final data set. The negative set comprised 152~272 sequences without any signal peptide annotation. Protein sequences with ambiguous symbols: X, J, Z, B and selenocysteine (U) were removed from the final sets.
+Eukaryotic protein sequences and their annotations were properly prepared according to the literature of the subject and downloaded from UniProt database release 2015\_06. The positive set contained 2~589 sequences with an experimentally confirmed signal peptide, containing its start and cleavage site information. Sequences with more than one cleavage site were excluded from the final data set. The negative set comprised 152~272 sequences without any signal peptide annotation. Protein sequences with ambiguous symbols: X, J, Z, B and selenocysteine (U) were removed from the final sets.
 
 \subsection*{Clustering of amino acids}
 
-SignalHsmm is not the first software which uses amino acid encoding in signal peptide prediction. BLOMAP~\citep{maetschke2005blomap} also employed the similar strategy but considered only substitution matrices. However, we applied different approach. We clustered amino acids using four properties relevant for the architecture of signal peptide: their hydrophobicity, frequency in $\alpha$-helices, polarity and size. The high hydrophobicity is determinants of the h-region, whose $\alpha$-helix secondary structure is probably induced by the positively charged n-region. The high polarity as well as small size are important features of residues in the cleavage site~\citep{1994palzkillselection}.
+SignalHsmm is not the first software which uses amino acid encoding in signal peptide prediction. BLOMAP~\citep{maetschke2005blomap} also employed the similar strategy but considered only substitution matrices. However, we applied different approach. We clustered amino acids using four properties relevant for the architecture of signal peptide: their hydrophobicity, frequency in $\alpha$-helices, polarity and size. The high hydrophobicity is determinant of the h-region, whose $\alpha$-helix secondary structure is probably induced by the positively charged n-region. The high polarity as well as small size are important features of residues in the cleavage site~\citep{1994palzkillselection}.
 
 \begin{table}[ht]
 \small
@@ -111,21 +111,21 @@ Size & Size~\citep{dawson1972size} \\
 \label{tab:aaprop}
 \end{table}
 
-We considered in total 13 amino acid scales from AAIndex database~\citep{2008kawashimaaaindex} (Tab.~\ref{tab:aaprop}). We selected one scale per property and carried out all possible 96 permutations of them. Based on that, we created 96 possible clusterings of amino acids using Euclidean distance and Ward's method. Next, we cut the clusterings to create four group of amino acids. In 31\% of cases, the groupings were identical. To compare the usefulness of encodings, we performed a 5-fold cross-validation training a new instance of signalHsmm on every encoding. We created balanced data sets by subsampling proteins without a signal peptide to equal the number of proteins with a signal peptide. The cross-validation was repeated 60 times. At first, we planned 160 repetitions to ensure that every protein without signal peptide was in the learning set with the probability of 0.95, but a very small variance of performance measures (for example see Tab.~\ref{tab:perfmeas}) for smaller number of repetitions allowed us to relax this condition without decreasing credibility of cross-validation.
+We considered in total 13 amino acid scales from AAIndex database~\citep{2008kawashimaaaindex} (Tab.~\ref{tab:aaprop}). We selected one scale per property and carried out all possible 96 permutations of them. Based on that, we created 96 possible clusterings of amino acids using Euclidean distance and Ward's method. Next, we cut the clusterings to create four group of amino acids. In 31\% of cases, the groupings were identical. To compare the usefulness of encodings, we performed a 5-fold cross-validation training a new instance of signalHsmm on every encoding. We created balanced data sets by subsampling proteins without a signal peptide to equal the number of proteins with a signal peptide. The cross-validation was repeated 60 times to ensure that every protein without signal peptide was included in the learning set with probability higher than 0.5. Very small variance of performance measures (for example see Tab.~\ref{tab:perfmeas})  confirms credibility of cross-validation.
 
 \subsection*{Hidden semi-Markov model}
 Hidden semi-Markov model (HSMM) is an extension of hidden Markov model (HMM). 
-Let us briefly describe the idea of the HMM. 
+Let us first briefly describe the idea of the HMM. 
 Suppose we have a sequence of observations, e.g. amino acids, and we are interested in understanding an underlying cause of their occurrence. 
-HMM aims to answer that question assuming a specific and flexible structure of the problem.
+HMM aims to answer that question assuming a specific and yet flexible structure of the problem.
 HMM consists of two stochastic processes. The first is a discrete Markov chain $X_{t=1}^T$ on the set of so called hidden states $\{S_1, \dots S_n\}$.
 They are "the cause" of the observations. At every step $t$, hidden state might change according to a transition matrix
 $A= (a)_{i,j=1}^n$, where $a_{i,j} = \mathcal{P}(X_{t+1} = S_j | X_t = S_i)$. In our application, hidden states are signal peptide regions.
-Th second process $E_{t=1}^T$ is an observation process defined on the set of possible observations $\{O_1, \dots, O_m\}$, which are assumed to occur independently. Their distribution depends only on the hidden state which emits it. 
-Probabilities are given by a matrix $B$, $b_{i,k} = \mathcal{P}(E_t = O_k | X_t = S_i)$.
+The second process $E_{t=1}^T$ is an observation process defined on the set of possible observations $\{O_1, \dots, O_m\}$,. They are assumed to occur independently conditionally on the hidden state which emits it. 
+Their distribution probabilities are given by a matrix $B$, $b_{i,k} = \mathcal{P}(E_t = O_k | X_t = S_i)$.
 In our case, observations are (encoded) amino acids.
 The main goal in signalHsmm is to find for a given peptide most probable regions boundaries. This is achieved with Viterbi algorithm.
-For a good reference on HMM, see~\citep{1989rabinera}.
+For a good reference on HMM see~\citep{1989rabinera}.
 
 In the regular HMM, the hidden state duration, i.e. the number of observations emitted by the hidden state, has a geometric distribution. \citep{Durbin98biologicalsequence} showed how to extend it for different distributions without significant increase in computational 
 complexity. Similar ideas were used for signal peptide recognition, for example by~\citep{2004klla}. 
@@ -193,14 +193,14 @@ are difficult to capture in this way.
 \label{fig:hsmm}
 \end{figure}
 
-The model we used is in fact Hidden semi-Markov Model(HSMM)~\citep{Yu2010215}. It extends HMM by allowing any given hidden state duration distribution (Fig.~\ref{fig:hsmm}).
+The model we used is Hidden semi-Markov Model(HSMM)~\citep{Yu2010215}. It extends HMM by allowing any given hidden state duration distribution (Fig.~\ref{fig:hsmm}).
 In addition to matrices $A$ and $B$, the model is given by probabilities of duration length in hidden states.
 $$\mathcal{P}(\text{duration in state} = d | \text{state is } S_i), \;\; i = 1, \dots, n, \;\; d = 1, \dots, D$$
 where $D$ is the maximum allowed duration.
-As our datasets are of reasonable size, $D$ is small -- around 30, computational effort is not much 
+As our datasets are of reasonable size and $D$ is small -- around 30, computational effort is not much 
 higher than in the regular HMM. 
 
-Our model has a very specific structure. Ihe hidden states represent signal peptide regions.
+Our model has a very specific structure. The hidden states represent signal peptide regions.
 Almost all entries in the transition matrix $A$ are zeros because regions are sequential.
 Possible transitions are depicted as arrows in Fig.~\ref{fig:signalHsmm}.
 Probabilities of observations for the hidden states and hidden states durations were estimated from training data.
@@ -347,15 +347,15 @@ AUC & 0.9683 & 0.0024 \\
 
 \subsection*{Comparison of encodings}
 
-We examined more in details encodings with the best sensitivity and the best specificity (Tab.~\ref{tab:best}, Tab.~\ref{tab:best} and Fig.~\ref{fig:enccomp}). In both cases, the group 1 tends to contain average-sized polar amino acids. In the best sensitivity encoding, all charged amino acids, both acidic and basic (also weakly basic histidine)belong to this group. These amino acids are nearly absent from h-region and provide very good distinction between regions of signal peptide. In the best specificity encoding, where polar and charged character of the group 1 is not such explicit, the difference in its distribution between the regions is also less visible.
+We examined in more detail encodings with the best sensitivity and the best specificity (Tab.~\ref{tab:best}, Tab.~\ref{tab:best} and Fig.~\ref{fig:enccomp}). In both cases, the group 1 tends to contain average-sized polar amino acids. In the best sensitivity encoding, all charged amino acids, both acidic and basic (also weakly basic histidine)belong to this group. These amino acids are nearly absent from h-region and provide very good distinction between regions of signal peptide. In the best specificity encoding, where polar and charged character of the group 1 is not so explicit, the difference in its distribution between the regions is also less visible.
 The amino acids belonging to the group 2 have a quite low probability of occurrence in $\alpha$-helix and are very diverse. This group includes polar but uncharged serine and threonine as well as hydrophobic tyrosine, aliphatic glycine and proline. In the best specificity encoding, the polar character of this group is emphasized by the addition of asparagine and aspartic acid. Despite these differences, the distribution of group 2 seems to be comparable in two encodings. The both groupings have strongly non-polar and aliphatic group 3 containing isoleucine, leucine, methionine and valine. The hydrophobic property of this group in the best sensitivity encoding are even more pronounced by the presence of tryptophan and phenylalanine. On the contrary, more polar histidine belongs to the group 3 in the best specificity encoding. Because of the hydrophobic character, this group dominates in the h-region in the case of both amino acid classifications.
 The fourth group is the most diverse in both encodings. In the case of the best specificity encoding, this group comprises aromatic amino acids: phenylalanine, tryptophan and tyrosine. In contrast, the group 4 in the best sensitivity encoding contains only alanine and cysteine, which both are rather small amino acids and tend to appear in $\alpha$-helices. This very unique composition seems to be typical of the c-region of signal peptide.
 
-The encoding of amino acid plays crucial role in the recognition of signal peptide but does not affect identification of proteins without signal peptides (compare change in specificity and sensitivity on Fig.~\ref{fig:cvres}). The mature protein state in the HSMM model tends to have a more uniform distribution of residues than signal peptide region, which make it more resistant to changes in amino acid groupings.
+The encoding of amino acid plays crucial role in the recognition of signal peptide but does not affect identification of proteins without signal peptides (compare change in specificity and sensitivity on Fig.~\ref{fig:cvres}). The mature protein state in the HSMM model tends to have a more uniform distribution of residues than signal peptide region, which makes it more resistant to changes in amino acid groupings.
 
 \subsection*{Benchmark tests}
 
-To provide the honest comparison, we trained our model on 2311 signal peptide-containing sequences deposited in Uniprot until 2010 year (an iteration of signalHsmm called signalHsmm-2010). The data set should correspond to the set used to train SignalP 4.1. Interestingly, our algorithm performed very well even if it was trained on a very small sets including only 336 sequences collected till 1987 year, just after the first method predicting signal peptide was published~\citep{1986vonheijnea}. The signalHsmm-1987 was able to very accurately predict a signal peptide, even better than predictors trained on richer data sets. It indicates that signalHsmm is very stable and is able to recover the structure of signal peptides from even very small data sets~\ref{tab:bench2010}.
+To provide the honest comparison, we trained our model on 2311 signal peptide-containing sequences deposited in Uniprot until 2010 year (an iteration of signalHsmm called signalHsmm-2010). The data set should correspond to the set used to train SignalP 4.1. Interestingly, our algorithm performed very well even if it was trained on a very small sets including only 336 sequences collected till 1987 year, just after the first method predicting signal peptide was published~\citep{1986vonheijnea}. The signalHsmm-1987 was able to very accurately predict a signal peptide, even better than predictors trained on richer data sets. It indicates that signalHsmm is very stable and is able to recover the structure of signal peptides from even very small data sets (see Tab.~\ref{tab:bench2010}).
 
 \begin{table}[ht]
 \small
@@ -365,14 +365,14 @@ To provide the honest comparison, we trained our model on 2311 signal peptide-co
   \toprule
 Software name & AUC & Sensitivity & Specificity & MCC \\ 
   \midrule
-signalP 4.1 (no tm) \citep{2011petersensignalp} & 0.9416 & 0.9720 & 0.9112 & 0.8848 \\ 
-   \rowcolor[gray]{0.85}signalP 4.1 (tm) \citep{2011petersensignalp} & 0.9673 & 0.9579 & 0.9766 & 0.9347 \\ 
+signalP 4.1 (no tm) \citep{2011petersensignalp} & 0.9416 & \textbf{0.9720} & 0.9112 & 0.8848 \\ 
+   \rowcolor[gray]{0.85}signalP 4.1 (tm) \citep{2011petersensignalp} & 0.9673 & 0.9579 & \textbf{0.9766} & \textbf{0.9347} \\ 
   PrediSi \citep{2004hillerpredisi} & 0.8949 & 0.9065 & 0.8832 & 0.7899 \\ 
    \rowcolor[gray]{0.85}Phobius \citep{2004klla} & 0.9509 & 0.9673 & 0.9346 & 0.9024 \\ 
   Philius \citep{2008reynoldstransmembrane} & 0.9369 & 0.9533 & 0.9206 & 0.8743 \\ 
    \rowcolor[gray]{0.85}signalHsmm-2010 & 0.9526 & 0.9533 & 0.8832 & 0.8385 \\ 
   signalHsmm-1989 & 0.9562 & 0.9626 & 0.8972 & 0.8617 \\ 
-   \rowcolor[gray]{0.85}signalHsmm-2010 with k-mers & 0.9679 & 0.9673 & 0.9112 & 0.8799 \\ 
+   \rowcolor[gray]{0.85}signalHsmm-2010 with k-mers & \textbf{0.9679} & 0.9673 & 0.9112 & 0.8799 \\ 
    \bottomrule
 \end{tabular}
 \label{tab:bench2010}
@@ -387,12 +387,12 @@ signalP 4.1 (no tm) \citep{2011petersensignalp} & 0.9416 & 0.9720 & 0.9112 & 0.8
 Software name & AUC & Sensitivity & Specificity & MCC \\ 
   \midrule
 signalP 4.1 (no tm) \citep{2011petersensignalp} & 0.7928 & 0.6471 & 0.9385 & 0.6185 \\ 
-   \rowcolor[gray]{0.85}PrediSi \citep{2004hillerpredisi} & 0.6597 & 0.3725 & 0.9469 & 0.4028 \\ 
+   \rowcolor[gray]{0.85}PrediSi \citep{2004hillerpredisi} & 0.6597 & 0.3725 & \textbf{0.9469} & 0.4028 \\ 
   Phobius \citep{2004klla} & 0.7963 & 0.6765 & 0.9162 & 0.5991 \\ 
    \rowcolor[gray]{0.85}Philius \citep{2008reynoldstransmembrane} & 0.7753 & 0.6176 & 0.9330 & 0.5841 \\ 
-  signalHsmm-2010 & 0.9340 & 0.7941 & 0.8939 & 0.6526 \\ 
-   \rowcolor[gray]{0.85}signalHsmm-1989 & 0.9326 & 0.9216 & 0.8966 & 0.7531 \\ 
-  signalHsmm-2010 with k-mers & 0.9334 & 0.9902 & 0.7989 & 0.6767 \\ 
+  signalHsmm-2010 & \textbf{0.9340} & 0.7941 & 0.8939 & 0.6526 \\ 
+   \rowcolor[gray]{0.85}signalHsmm-1989 & 0.9326 & 0.9216 & 0.8966 & \textbf{0.7531} \\ 
+  signalHsmm-2010 with k-mers & 0.9334 & \textbf{0.9902} & 0.7989 & 0.6767 \\ 
    \bottomrule
 \end{tabular}
 \label{tab:bench2010plas}
@@ -403,10 +403,11 @@ To check universality of our probabilistic model, we also validated it on signal
 
 \subsection*{Conclusions}
 
-The architecture of existing signal peptide predicting software is usually opaque, preventing analysis of decision rules included in the models. Researchers cannot also discover  parameters that are responsible for the predictions. Considering the biological context of the problem, we see a need for a transparent model of signal peptide. SignalHsmm is the first step in this direction providing users with both prediction results and the extendable, readable predictive model. 
+The architecture of existing signal peptide predicting software is usually opaque which makes analysis of how its decisions are made impossible. Researchers cannot discover which parameters are responsible for the predictions. Considering the biological context of the problem, we see a need for a transparent model of signal peptide. SignalHsmm is the first step in this direction. 
+It provides users good performance as well as interpretability and expendability of predictive model. 
 Aside from the confirmation of the accepted signal peptide model (hydrophibicity of the h-region and polarity of the n-region), we also found that the alanine is one of the most typical amino acids in the c-region in comparison to others.
-The good performance of signalHsmm confirms that properties of signal peptides do not depend on their exact sequence but on the physicochemical features of the amino acids. 
-The flexibility and efficient information recovery makes our model unique among similar software. The signalHsmm not only shows very good performance but is also adjustable enough to model properly very specific signal peptides belonging to poorly represented taxonomic groups in databases. Moreover, our method can effectively extract information from very small data sets, which in future may lead to new predictors able to recognize atypical signaling sequences.
+The performance of signalHsmm confirms that properties of signal peptides do not depend on their exact sequence but on the physicochemical features of the amino acids. 
+The flexibility and efficient information recovery makes our model unique among similar software. The signalHsmm is also adjustable enough to model properly very specific signal peptides belonging to taxonomic groups which are poorly represented in databases. Moreover, our method can effectively extract information from very small data sets, which in future may lead to new predictors able to recognize atypical signaling sequences.
 
 \subsection*{Availability and implementation}
 The signalHsmm prediction web-server is available at: \url{http://smorfland.uni.wroc.pl/signalhsmm}. SignalHsmm is implemented as an R package available at: \url{http://cran.r-project.org/web/packages/signalHsmm}. Stand-alone version offers prediction and tools to build, train and test novel signal peptide models.
