first abstract sentence again

--- a/paper.tex
+++ b/paper.tex
@@ -24,8 +24,7 @@
 \keywords{eukaryote; hidden semi-Markov models; n-gram; signal peptide prediction}
 
 \begin{abstract}
-We provide high-performance tool for recognizing signal peptides, which prediction results are easy to interpret 
-and which structure is readily expandable by the researcher.
+signalHsmm using universal, transparent and extendable model of signal peptides, predicts their presence in eukaryotic proteins.
 Signal peptides play important role in cell biology as they are responsible for targeting of proteins to endomembrane system and their export outside the cell. Proteins equipped with signal peptides play crucial roles in metabolism, maintenance of tissue structure, immune response and regulation of other organismal functions. They may be recognized with adequate accuracy using learning systems, that are usually 'black-box' models. Without an ability to trace decision rules, researchers cannot discover which parameters are responsible for predictions. Therefore, we designed a new, more universal probabilistic model for eukaryotic signal peptides, which includes knowledge about their organization, amino acid composition and variability. The proposed approach is based on hidden semi-Markov models (HSMMs) and uses intrinsic knowledge about signal peptides. The big advantage of the algorithm is its extensibility. By using the n-grams (k-mers), we showed that the general model can yield not only better results than other software but also more information about features of signal peptides. Our model showed the largest AUC = 0.97 in comparison to other signal peptide predictor even though it was trained on very small data sets. Moreover, it proved to be very stable regardless of types of learning data sets. Therefore, our model does not need to be permanently retrained with the continuous expansion of sequence databases. It should be emphasized, that our model is able to recognize signal peptides from medically significant malaria parasites \textsl{Plasmodium} and their relatives more accurately (with AUC = 0.92) than popular programs (0.84). The web-server of signalHsmm is available at \url{http://smorfland.uni.wroc.pl/signalhsmm}.
 
 \end{abstract}
